ДЗ Feature selection доработано, на проверку

--- a/homework_11.ipynb
+++ b/homework_11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -19,6 +19,13 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import f_classif\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.feature_selection import SequentialFeatureSelector\n",
     "%matplotlib inline"
    ]
   },
@@ -353,6 +360,219 @@
   {
    "cell_type": "markdown",
    "source": [
+    "4. Осуществите отбор признаков на основе дисперсионного анализа:\n",
+    "\n",
+    "    a) Выберите 5 лучших признаков с помощью скоринговой функции для классификации f_classif ([SelectKBest](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.SelectKBest.html)(f_classif, k=5)).\n",
+    "\n",
+    "    b) Повторите п. 2 на отобранных признаках."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "0.93"
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y2 = y_data_generated\n",
+    "x2 = SelectKBest(f_classif, k=5).fit_transform(x_data_generated, y2)\n",
+    "print(x2.shape)\n",
+    "cross_val_score(LogisticRegression(), x2, y2, scoring=\"accuracy\").mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "5. Отбор с использованием моделей:\n",
+    "\n",
+    "    a) Реализуйте отбор признаков с помощью логистической регрессии. Отобранные признаки подайте далее на вход в саму логистическую регрессию ([SelectFromModel](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.SelectFromModel.html)). Используйте L1 регуляризацию.\n",
+    "\n",
+    "    b) Реализуйте отбор признаков с помощью модели [RandomForest](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) и встроенного атрибута feature_impotance.\n",
+    "\n",
+    "    c) Повторите п. 2 на отобранных признаках в п. 5a, п. 5b."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "0.93"
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y3 = y_data_generated\n",
+    "lsvc = LinearSVC(C=0.1, penalty=\"l1\", dual=False).fit(x_data_generated, y3)\n",
+    "model = SelectFromModel(lsvc, prefit=True)\n",
+    "x3 = model.transform(x_data_generated)\n",
+    "print(x3.shape)\n",
+    "cross_val_score(LogisticRegression(), x3, y3, scoring=\"accuracy\").mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\t- 0.0184\n",
+      "1\t- 0.0155\n",
+      "2\t- 0.1237\n",
+      "3\t- 0.0773\n",
+      "4\t- 0.0107\n",
+      "5\t- 0.0245\n",
+      "6\t- 0.0200\n",
+      "7\t- 0.0267\n",
+      "8\t- 0.0045\n",
+      "9\t- 0.0106\n",
+      "10\t- 0.0347\n",
+      "11\t- 0.0164\n",
+      "12\t- 0.0294\n",
+      "13\t- 0.0114\n",
+      "14\t- 0.0222\n",
+      "15\t- 0.4153\n",
+      "16\t- 0.0618\n",
+      "17\t- 0.0231\n",
+      "18\t- 0.0328\n",
+      "19\t- 0.0211\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "0.8700000000000001"
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y4 = y_data_generated\n",
+    "x4 = x_data_generated\n",
+    "clf = RandomForestClassifier(n_estimators=20, max_depth=None, min_samples_split=2, random_state=0, max_features=5)\n",
+    "clf.fit(x4, y4)\n",
+    "for i in range(20):\n",
+    "    print(f\"{pd.DataFrame(x4).columns[i]}\\t- {clf.feature_importances_[i]:.4f}\")\n",
+    "x4 = pd.DataFrame(x_data_generated)[[15, 2, 3, 16, 10]]\n",
+    "cross_val_score(clf, x4, y4, scoring=\"accuracy\").mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "6. Перебор признаков:\n",
+    "\n",
+    "    a) [SequentialFeatureSelector](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.SequentialFeatureSelector.html).\n",
+    "\n",
+    "    b) Повторите п. 2 на отобранных признаках."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15 16]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "0.8800000000000001"
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ridge = RidgeCV(alphas=np.logspace(-6, 6, num=5)).fit(x_data_generated, y_data_generated)\n",
+    "sfs_forward = SequentialFeatureSelector(\n",
+    "    ridge, n_features_to_select=2, direction=\"forward\"\n",
+    ").fit(x_data_generated, y_data_generated)\n",
+    "feature_names = np.array(pd.DataFrame(x_data_generated).columns)\n",
+    "names = feature_names[sfs_forward.get_support()]\n",
+    "print(names)\n",
+    "x5 = pd.DataFrame(x_data_generated)[[15, 16]]\n",
+    "y5 = y_data_generated\n",
+    "cross_val_score(LogisticRegression(), x5, y5, scoring=\"accuracy\").mean()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "7. Сформулируйте выводы по проделанной работе:\n",
     "\n",
     "    a) Сделайте таблицу вида |способ выбора признаков|количество признаков|средняя точность модели|."
@@ -366,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 159,
    "outputs": [],
    "source": [
     "sum_df = pd.DataFrame(columns=[\"способ выбора признаков\", \"кол-во признаков\", \"средняя точность модели\"])"
@@ -380,11 +600,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 160,
    "outputs": [],
    "source": [
     "sum_df.loc[len(sum_df)]=['без выбора', 20, 0.88]\n",
-    "sum_df.loc[len(sum_df)]=['удаление корреляций и низковариативных', 7, 0.91]"
+    "sum_df.loc[len(sum_df)]=['удаление корреляций и низковариативных', 7, 0.91]\n",
+    "sum_df.loc[len(sum_df)]=['SelectKBest', 5, 0.93]\n",
+    "sum_df.loc[len(sum_df)]=['SelectFromModel', 3, 0.93]\n",
+    "sum_df.loc[len(sum_df)]=['RandomForestClassifier', 5, 0.87]"
    ],
    "metadata": {
     "collapsed": false,
@@ -395,20 +618,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 161,
    "outputs": [
     {
      "data": {
-      "text/plain": "                  способ выбора признаков  кол-во признаков  \\\n0                              без выбора                20   \n1  удаление корреляций и низковариативных                 7   \n\n   средняя точность модели  \n0                     0.88  \n1                     0.91  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>способ выбора признаков</th>\n      <th>кол-во признаков</th>\n      <th>средняя точность модели</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>без выбора</td>\n      <td>20</td>\n      <td>0.88</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>удаление корреляций и низковариативных</td>\n      <td>7</td>\n      <td>0.91</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                  способ выбора признаков  кол-во признаков  \\\n0                              без выбора                20   \n1  удаление корреляций и низковариативных                 7   \n2                             SelectKBest                 5   \n3                         SelectFromModel                 3   \n4                  RandomForestClassifier                 5   \n\n   средняя точность модели  \n0                     0.88  \n1                     0.91  \n2                     0.93  \n3                     0.93  \n4                     0.87  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>способ выбора признаков</th>\n      <th>кол-во признаков</th>\n      <th>средняя точность модели</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>без выбора</td>\n      <td>20</td>\n      <td>0.88</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>удаление корреляций и низковариативных</td>\n      <td>7</td>\n      <td>0.91</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>SelectKBest</td>\n      <td>5</td>\n      <td>0.93</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>SelectFromModel</td>\n      <td>3</td>\n      <td>0.93</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RandomForestClassifier</td>\n      <td>5</td>\n      <td>0.87</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 88,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum_df.head(2)"
+    "sum_df.head(5)"
    ],
    "metadata": {
     "collapsed": false,
